# somneo-grafana

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyvenv.cfg
.claude/: project.md
.github/workflows/: docker-publish.yml
grafana-dashboard/: dashboard.yml  somneo-sensors.json
grafana-datasource/: influxdb.yml
src/somneo/: influxdb_exporter.py  main.py  somneo_fetch.py  somneo_read.py
